syntax = "proto2";

package com.google.sps.proto;

option java_outer_classname = "UserRoomStatusProto";

message UserRoomStatusRequest {
  required string roomId = 1;
}

message UserRoomStatusResponse {
  required string roomId = 1;
  required bool isJoined = 2;
}
